post controller tag sync fixed, post content overflowing fixed, invokable function in subscribe controller, tags show blade fixed

--- a/resources/sass/_style.scss
+++ b/resources/sass/_style.scss
@@ -66,9 +66,13 @@ ul {
     list-style: none;
   }
 }
+
 pre {
   max-width: 100%;
   overflow-wrap: break-word;
+  overflow: auto;
+  word-wrap: normal;
+  white-space: pre;
 }
 img {
   max-width: 100%;
@@ -463,6 +467,7 @@ blockquote {
 */
 
 .post-list {
+  max-width: 100%;
   .posts {
     position: relative;
     margin-bottom: 35px;
